--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,4 @@ fastlane/test_output
 # macOS
 .DS_Store
 **/.DS_Store
+SIBI Detection.xcodeproj/project.xcworkspace/xcuserdata/ezra.xcuserdatad/UserInterfaceState.xcuserstate
